[tool.poetry]
name = "massacre"
version = "0.1.0"
description = ""
authors = ["Valentin Khakimov <mr.lampochka.ru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
pygame-gui = "^0.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
