[tool.poetry]
name = "massacre"
version = "0.1.0"
description = ""
authors = ["Valentin Khakimov <mr.lampochka.ru@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12, <3.14"
pygame = "^2.6.0"
pygame-gui = "^0.6.12"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
